"Updated artist name and project details in index.html, portfolio-page.html, and portfolioII-page.html"

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 Hello. I am <strong>Sam Jones</strong>, a self-taught artist.
             </h1>
             <p class="secsubtitle secsubtitle_intro"><strong>I Present You my Art Portfolio</strong></p>
-            <img src="images/artist.jpg" width="220" height="220" alt="Portrait of Sam Jones" class="first_img">
+            <img src="images/artist.jpg" width="220" height="220" alt="Portrait of MJ" class="first_img">
         </section>
         <!--Other sections here-->
     </main>
