--- a/portfolio-page.html
+++ b/portfolio-page.html
@@ -33,7 +33,7 @@
         <!--Top Introduction Section-->
         <section class="topintro" id="home">
             <h1 class="sectitle sectitle_intro">
-                My <strong>First Project</strong>
+                First <strong>Painting Project</strong>
             </h1>
 
             <p class="secsubtitle secsubtitle_intro"><strong>The Rosy Path</strong></p>
@@ -42,8 +42,8 @@
         </section>
 
         <div class="portfolio_detail">
-            <p>This was my first painting. I began working on it in January 2016 and finished it in
-                in march of the same year;
+            <p>This is the first painting. I began working on it in April 2020 and finished it in
+                in June of the same year;
             </p>
             <img src="images/img1.jpg" alt="first project">
             <p>It was inspired by one of my visits to the scenic fields of 
